--- a/resources/views/home.edge
+++ b/resources/views/home.edge
@@ -1,7 +1,167 @@
 @layout('layouts.main')
 
 @section('content')
- <div class="row">
+ <div class="row justify-content-center">
     <h1>Registro de personal</h1>
+    <div class="col-md-12 form-inline justify-content-center">
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Ingreso de datos</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Información basica</h6>
+                    <form action="{{ route('WorkforceController.store') }}" method="post">
+                        {{ csrfField() }}
+                        <div class="form-group col-md-12 {{ hasErrorFor('fullname') ? 'has-danger' : ''}}">
+                            <label for="fullname" class="col-md-5">Nombre Completo</label>
+                            <input name="fullname" type="text" 
+                            class="form-control col-md-7 {{ hasErrorFor('fullname') ? 'is-invalid' : ''}}"
+                            id="fullname" aria-describedby="fullnameHelp" 
+                            placeholder="Ingrese su nombre" value="{{ old('fullname', '') }}">
+                            <small id="fullnameHelp" 
+                            class="form-text col-md-11 offset-5 {{ hasErrorFor('fullname') ? 'invalid-feedback' : 'text-muted'}}">
+                            {{ hasErrorFor('fullname') ? getErrorFor('fullname') : 'Nombre del personal'}}
+                            </small>
+                            {{--  {{ getErrorFor('description'), hasErrorFor('description') }}  --}}
+                        </div>
+
+                        <div class="form-group col-md-12 {{ hasErrorFor('email') ? 'has-danger' : ''}}">
+                            <label for="email" class="col-md-5">Correo Electrónico</label>
+                            <input name="email" type="text" 
+                            class="form-control col-md-7 {{ hasErrorFor('email') ? 'is-invalid' : ''}}"
+                            id="email" aria-describedby="emailHelp" 
+                            placeholder="Ingrese un correo" value="{{ old('email', '') }}">
+                            <small id="emailHelp" 
+                            class="form-text col-md-11 offset-5 {{ hasErrorFor('email') ? 'invalid-feedback' : 'text-muted'}}">
+                            {{ hasErrorFor('email') ? getErrorFor('email') : 'Dirección de correo electrónico'}}
+                            </small>
+                            {{--  {{ getErrorFor('description'), hasErrorFor('description') }}  --}}
+                        </div>
+
+                        <div class="col-md-12 form-inline">
+                            <div class="form-group col-md-6 {{ hasErrorFor('area_id') ? 'has-danger' : ''}}">
+                                <label for="area_id" class="col-md-3">Area </label>
+                                <select name="area_id"
+                                class="col-md-9">
+                                    <option value="">[Seleccione...]</option>
+                                    @each(area in areas)
+                                    <option value="{{area.id}}">{{area.description}}</option>
+                                    @endeach
+                                </select>
+                                <small class="form-text col-md-12 offset-3{{ hasErrorFor('area_id') ? ' text-danger' : ' text-muted'}}">
+                                {{ hasErrorFor('area_id') ? getErrorFor('area_id') : 'Seleccione el area que aplique.'}}
+                                </small>
+                            </div>
+                        
+                            <div class="form-group col-md-6 {{ hasErrorFor('employment_id') ? 'has-danger' : ''}}">
+                                <label for="employment_id" class="col-md-3">Cargo</label>
+                                <select name="employment_id" 
+                                class="col-md-9">
+                                    <option value="">[Seleccione...]</option>
+                                    @each(employment in employments)
+                                    <option value="{{employment.id}}">{{employment.description}}</option>
+                                    @endeach
+                                </select>
+                                <small class="form-text col-md-12 offset-3{{ hasErrorFor('employment_id') ? ' text-danger' : ' text-muted'}}">
+                                {{ hasErrorFor('employment_id') ? getErrorFor('employment_id') : 'Seleccione el cargo disponible.'}}
+                                </small>
+                            </div>
+                        </div>
+                        <div class="form-group col-md-12 {{ hasErrorFor('telephone') ? 'has-danger' : ''}}">
+                            <label for="telephone" class="col-md-5">Número Telefono</label>
+                            <input name="telephone" type="text" 
+                            class="form-control {{ hasErrorFor('telephone') ? 'is-invalid' : ''}}"
+                            id="cargo" aria-describedby="cargoHelp" 
+                            placeholder="Ingrese un numero de telefono" value="{{ old('telephone', '') }}">
+                            <small id="cargoHelp" 
+                            class="form-text col-md-11 offset-md-5{{ hasErrorFor('telephone') ? ' invalid-feedback' : ' text-muted'}}">
+                            {{ hasErrorFor('telephone') ? getErrorFor('telephone') : 'Número Telefónico'}}
+                            </small>
+                            {{--  {{ getErrorFor('description'), hasErrorFor('description') }}  --}}
+                        </div>
+
+                        <div class="form-group col-md-12 {{ hasErrorFor('address') ? 'has-danger' : ''}}">
+                            <label for="address" class="col-md-3">Dirección</label>
+                            <input name="address" type="text" 
+                            class="form-control col-md-9{{ hasErrorFor('address') ? ' is-invalid' : ''}}"
+                            id="cargo" aria-describedby="cargoHelp" 
+                            placeholder="Ingrese una dirección" value="{{ old('address', '') }}">
+                            <small id="cargoHelp" 
+                            class="form-text col-md-11 offset-3{{ hasErrorFor('address') ? ' invalid-feedback' : ' text-muted'}}">
+                            {{ hasErrorFor('address') ? getErrorFor('address') : 'Dirección de residencia'}}
+                            </small>
+                            {{--  {{ getErrorFor('description'), hasErrorFor('description') }}  --}}
+                        </div>
+
+                        
+                        <button type="submit" class="btn btn-success float-right">Agregar Personal</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+            <table class="table table-striped table-hover mt-5">
+                <thead>
+                    <tr class="table-success">
+                    <th>Nombre Completo</th>
+                    <th>Correo Electrónico</th>
+                    <th>Area</th>
+                    <th>Cargo</th>
+                    <th>Número Telefono</th>
+                    <th>Dirección o residencia</th>
+                    <th>Fecha de creación</th>
+                    <th>Acción</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @each(workforce in workforces)
+                        <tr>
+                            <td>{{ workforce.fullname}}</td>
+                            <td>{{ workforce.email}}</td>
+                            <td>{{ workforce.area.description}}</td>
+                            <td>{{ workforce.employment.description}}</td>
+                            <td>{{ workforce.telephone}}</td>
+                            <td>{{ workforce.address}}</td>
+                            <td>{{ workforce.created_at}}</td>
+                            <td>
+                                <form action="/{{ workforce.id }}?_method=delete" method="post">
+                                    {{ csrfField() }}
+                                    <button type="submit" class="btn btn-danger"><span class="fas fa-trash-alt"></span></button>
+                                </form>
+                            </td>
+                        </tr>
+                    @else
+                    <tr>
+                        <td colspan="8">
+                            <h4 class="alert alert-info">No hay personal registrado!</h4>
+                        </td>
+                    </tr>
+                    @endeach
+
+                </tbody>
+            </table>
+    </div>
  </div>
+@endsection
+
+@section('scripts')
+    @super
+    <script>
+        $('select[name=area_id]').on('change', function(){
+            let items = '<option value=" ">[Seleccione...]</option>';
+            var seleccion = $(this).val();
+            if (seleccion != '') {
+                $.get("/" + seleccion, function (data) {
+                    //var data = JSON.parse(data);
+                    for (const item of data) {
+                        //console.log(item.description);
+                        items += '<option value="' + item.id + '">' + item.description + '</option>';
+                    }
+                    $('select[name=employment_id]').select2("destroy");
+                    $('select[name=employment_id]').html(items).select2();
+                })
+            } else {
+                $('select[name=employment_id]').select2("destroy");
+                $('select[name=employment_id]').html(items).select2();
+            }
+        })
+    </script>
 @endsection
