--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -18,7 +18,7 @@
         @!section('content')
     </div>
     @section('scripts')
-      {{ script('https://code.jquery.com/jquery-3.3.1.slim.min.js') }}
+      {{ script('https://code.jquery.com/jquery-3.3.1.min.js') }}
       {{ script('app.js') }}
       {{ script('https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js') }}
       {{ script('https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js') }}
