--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">AdonisBlog</a>
+  <a class="navbar-brand" href="{{ route('WorkforceController.index') }}">AdonisBlog</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item {{url === '/' ? 'active' : ''}}">
-        <a class="nav-link" href="/">Inicio <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{ route('WorkforceController.index') }}">Inicio <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item {{url === '/employments' ? 'active' : ''}}">
         <a class="nav-link" href="{{ route('EmploymentController.index') }}">Cargos</a>
